--- a/Tarla/aboutUs.html
+++ b/Tarla/aboutUs.html
@@ -14,17 +14,17 @@
         <span></span>
       </label>
       <ul class="menu__box theme-specialElement">
-        <li><a class="menu__item theme-specialElement" href="#legend">Legend</a></li>
-        <li><a class="menu__item theme-specialElement" href="#privacyPolicy">Privacy Policy</a></li>
-        <li><a class="menu__item theme-specialElement" href="#location">Location</a></li>
+        <li><a class="menu__item theme-specialElement" data-i18="Legend" href="#legend">Legend</a></li>
+        <li><a class="menu__item theme-specialElement" data-i18="Privacy" href="#privacyPolicy">Privacy Policy</a></li>
+        <li><a class="menu__item theme-specialElement" data-i18="Location" href="#location">Location</a></li>
       </ul>
     </div>
     <a class="logo" href="..\Tarla\index.html"><img src="..\Images\Frame.png" alt="logo" /></a>
     
     <ul class="navigation">
-      <li class="li"><a class="link theme-specialElement" href="#legend">Legend</a></li>
-      <li class="li"><a class="link theme-specialElement" href="#privacyPolicy">Privacy Policy</a></li>
-      <li class="li"><a class="link theme-specialElement" href="#location">Location</a></li>
+      <li class="li"><a class="link theme-specialElement" data-i18="Legend" href="#legend">Legend</a></li>
+      <li class="li"><a class="link theme-specialElement" data-i18="Privacy" href="#privacyPolicy">Privacy Policy</a></li>
+      <li class="li"><a class="link theme-specialElement" data-i18="Location" href="#location">Location</a></li>
     </ul>
     <div class="switchers">
       <button data-i18="en" class="switcher changeButton theme-blueButton">
@@ -51,8 +51,8 @@
       <div class="paragraph2">
         <img class="img" src="..\Images\aboutUs1.png" alt="" />
         <div class="text">
-          <h3>Amazing Ingredients</h1>
-          <p class="textP">
+          <h3 data-i18="AmazingIngredients">Amazing Ingredients</h1>
+          <p data-i18="AmazingIngredientsDif" class="textP">
             We like to keep things simple and authentic. We’ve sourced the very
             best from the very best, from our Poitou-Charentes butter to our
             Valrhona chocolate batons.
@@ -61,10 +61,10 @@
       </div>
    </section>
    <section  class="aboutTarla theme-element">
-    <h3>A little bit about the bakery...</h1>
-    <p class="textP textAboutTarla">I was looking for the same taste, so I decided to bake high-quality and healthy sourdough bread only from natural ingredients without the use of improvers, special dry mixes, using a minimum of ingredients: flour, water and salt. He named the bakery with his last name. I say by this that I bake as for myself.
+    <h3 data-i18="AboutTarla">A little bit about the bakery...</h1>
+    <p data-i18="AboutTarlaDif1" class="textP textAboutTarla">I was looking for the same taste, so I decided to bake high-quality and healthy sourdough bread only from natural ingredients without the use of improvers, special dry mixes, using a minimum of ingredients: flour, water and salt. He named the bakery with his last name. I say by this that I bake as for myself.
     </p>
-    <p class="textP textAboutTarla">
+    <p data-i18="AboutTarlaDif2" class="textP textAboutTarla">
       Fresh sourdough bread, croissants and other pastries with delivery in Minsk, as well as at branded points of sale and in restaurants of our partners. Our bread is served in excellent establishments in Minsk. The trust in our products from such customers once again confirms the excellent quality of our work.
     </p>
     </section>
@@ -72,8 +72,8 @@
       <section class="section">
       <div class="paragraph">
         <div class="text">
-          <h3 id="legend">Legendary Bakes</h1>
-          <p class="textP">
+          <h3 data-i18="LegendaryBakes" id="legend">Legendary Bakes</h1>
+          <p data-i18="LegendaryBakesDif"  class="textP">
             The inspiration for our brand and our guiding principles is the
             Legend of El Tarlà. A young man who brought joy to the isolated
             citizens of Girona during an outbreak of the plague.
@@ -84,24 +84,24 @@
     </section>
     <section class="section1">
       <div class="div1">
-        <h3>Terms of Service</h1>
+        <h3 data-i18="TermsOfService">Terms of Service</h1>
         <ul class="textP">
-          <li>
+          <li data-i18="TermsOfService1">
             Tarla Company collects personal information such as name, email
             address, and shipping address solely for the purpose of processing
             orders and providing customer support.
           </li>
-          <li>
+          <li data-i18="TermsOfService2">
             Personal information provided to Tarla Company is used only for
             order fulfillment, customer communication, and improving our
             services.
           </li>
-          <li>
+          <li data-i18="TermsOfService3">
             We implement industry-standard security measures to protect personal
             information from unauthorized access, alteration, disclosure, or
             destruction.
           </li>
-          <li>
+          <li data-i18="TermsOfService4">
             Tarla Company may use cookies to enhance user experience and track
             website usage.
           </li>
@@ -109,28 +109,28 @@
       </div>
       
       <div id="privacyPolicy" class="div1">
-        <h3 >Privacy Policy</h1>
+        <h3 data-i18="Privacy">Privacy Policy</h1>
         <ul class="textP">
-          <li>
+          <li data-i18="Privacy1">
             By accessing or using any services provided by Tarla Company, users
             agree to be bound by these Terms of Service.
           </li>
-          <li>
+          <li data-i18="Privacy2">
             While we strive to provide accurate product descriptions and images,
             Tarla Company does not warrant that product descriptions or other
             content on our website are accurate, complete, reliable, current, or
             error-free.
           </li>
-          <li>
+          <li data-i18="Privacy3">
             Tarla Company will make every effort to ensure timely delivery of
             orders. However, we are not responsible for delays or issues caused
             by third-party shipping carriers.
           </li>
-          <li>
+          <li data-i18="Privacy4">
             Please refer to our Returns and Refunds Policy for information on
             returning products and requesting refunds.
           </li>
-          <li>
+          <li data-i18="Privacy5">
             Tarla Company will make every effort to ensure timely delivery of
             orders. However, we are not responsible for delays or issues caused
             by third-party shipping carriers.
@@ -139,15 +139,15 @@
       </div>
     </section>
     <section class=" map theme-specialElement">
-      <div class="visibleMap">
+      <div  class="visibleMap">
         <script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=570&amp;height=376&amp;lang=ru_RU&amp;scroll=true"></script>  
       </div>
          <div class="text">
-        <h3 id="location">Our location in USA</h1>
+        <h3 data-i18="OurLocationInUSA" id="location">Our location in USA</h1>
         <div class="unvisibleImg">
           <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=320&amp;height=323&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>        
-        <p class="textP">
+        <p data-i18="OurLocationInUSADif" class="textP">
           We like to keep things simple and authentic. We’ve sourced the very
           best from the very best, from our Poitou-Charentes butter to our
           Valrhona chocolate batons.
@@ -162,10 +162,10 @@
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
-  <a class="link theme-element" href="..\Tarla\index.html">Tarla</a>
-  <a class="link theme-element" href="..\Tarla\index.html">How to use</a>
-  <a class="link theme-element" href="..\Tarla\catalog.html">Catalog</a>
-  <a class="link theme-element" href="..\Tarla\catalog.html">Prices</a>
+  <a data-i18="Tarla" class="link theme-element" href="..\Tarla\index.html">Tarla</a>
+  <a data-i18="HowToUse" class="link theme-element" href="..\Tarla\index.html">How to use</a>
+  <a data-i18="Catalog" class="link theme-element" href="..\Tarla\catalog.html">Catalog</a>
+  <a data-i18="Price" class="link theme-element" href="..\Tarla\catalog.html">Prices</a>
 </div>
 <script src="..\Tarla\swaper.js"></script>
 <script src="..\changeLanguage.js"></script>
