--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -17,23 +17,20 @@
           <span></span>
         </label>
         <ul class="menu__box theme-element">
-          <li class="li">
-            <a class="menu__item theme-element" href="#top">Top</a>
+           <li>
+            <a class="menu__item theme-element" data-i18="ingredient"  href="#ingredient"> Ingredients</a></li>
           </li>
           <li>
-            <a class="menu__item theme-element" href="#ingredient"> Ingredients</a></li>
+            <a class="menu__item theme-element" data-i18="Location"  href="#location">Location</a></li>
           </li>
-          <li>
-            <a class="menu__item theme-element" href="#location">Location</a></li>
-          </li>
-          <li><a class="menu__item theme-element" href="#legend">Legend</a></li>
+          <li><a class="menu__item theme-element" data-i18="Legend" href="#legend">Legend</a></li>
           </ul>
       </div>
       
         <ul class="navigation">
-            <li class="li"><a class="link theme-specialElement" href="#ingredient"> Ingredients</a></li>
-            <li class="li"><a class="link theme-specialElement" href="#location">Location</a></li>
-            <li class="li"><a class="link theme-specialElement" href="#legend">Legend</a></li>
+            <li class="li"><a class="link theme-specialElement" data-i18="ingredient"  href="#ingredient"> Ingredients</a></li>
+            <li class="li"><a class="link theme-specialElement" data-i18="Location"  href="#location">Location</a></li>
+            <li class="li"><a class="link theme-specialElement" data-i18="Legend" href="#legend">Legend</a></li>
           </ul>
           <div class="switchers">
             <button data-i18="en" class="switcher changeButton theme-blueButton">
@@ -59,9 +56,9 @@
         
             <img class="img" src="..\Images\aboutUs1.png" alt="" />
             <div class="text">
-              <h1 id="ingredient" class="textH1">Amazing Ingredients</h1>
+              <h1 data-i18="AmazingIngredients" id="ingredient" class="textH1">Amazing Ingredients</h1>
               <img class="unvisibleImg" src="..\Images\aboutUs1.png" alt="" />
-              <p class="textP">
+              <p data-i18="AmazingIngredientsDifs" class="textP">
                 We like to keep things simple and authentic. We’ve sourced the very
                 best from the very best, from our Poitou-Charentes butter to our
                 Valrhona chocolate batons.
@@ -71,11 +68,11 @@
     </section>
     <section class=" map theme-specialElement">
       <div class="text">
-        <h1 id="location" class="textH1 ">Our location in USA</h1>
+        <h1 data-i18="OurLocationInUSA" id="location" class="textH1 ">Our location in USA</h1>
           <div class="img visibleMap">
         <script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=630&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
       </div>      
-        <p class="textP">
+        <p data-i18="OurLocationInUSADif" class="textP">
           We like to keep things simple and authentic. We’ve sourced the very
           best from the very best, from our Poitou-Charentes butter to our
           Valrhona chocolate batons.
@@ -90,9 +87,9 @@
     <section class="section theme-element">                          
           <img class="img" src="..\Images\aboutUs2.png" alt="" /> 
             <div class="text">
-              <h1 id="legend" class="textH1">Legendary Bakes</h1>
+              <h1 data-i18="LegendaryBakes" id="legend" class="textH1">Legendary Bakes</h1>
               <img class="unvisibleImg" src="..\Images\aboutUs2.png" alt="" /> 
-              <p class="textP">
+              <p data-i18="LegendaryBakesDif" class="textP">
                 The inspiration for our brand and our guiding principles is the
                 Legend of El Tarlà. A young man who brought joy to the isolated
                 citizens of Girona during an outbreak of the plague.
@@ -107,10 +104,10 @@
         <img src="..\Images\e-mail.png" alt="E-mail">
       </div>
   <div class="divfooter" > 
-    <a class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
-    <a class="link theme-element" href="..\NotAuthorized\index.html">Tarla</a>
-    <a class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
-    <a class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
+    <a class="link theme-element" data-i18="FAQ"  href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
+    <a class="link theme-element" data-i18="Tarla"  href="..\NotAuthorized\index.html">Tarla</a>
+    <a class="link theme-element" data-i18="TermsOfService" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
+    <a class="link theme-element" data-i18="Privacy" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
   </div>
   <script src="..\Tarla\swaper.js"></script>
   <script src="..\changeLanguage.js"></script>
