feat: added language change for WhoIsTarla page

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -17,17 +17,14 @@
         </label>
         <ul class="menu__box theme-specialElement">
           <li>
-            <a class="menu__item theme-specialElement" href="#termsOfService">Terms of Service</a>
+            <a class="menu__item theme-specialElement" data-i18="TermsOfService" href="#termsOfService">Terms of Service</a>
           </li>
           <li>
-            <a class="menu__item theme-specialElement" href="#privacyPolicy">Privacy Policy</a>
+            <a class="menu__item theme-specialElement" data-i18="Privacy" href="#privacyPolicy">Privacy Policy</a>
           </li>
-          <li><a class="menu__item theme-specialElement" href="#ourMessege">Our message</a></li>
+          <li><a class="menu__item theme-specialElement" data-i18="OurMessage" href="#ourMessege">Our message</a></li>
           <li class="li">
-            <a class="menu__item theme-specialElement" href="#makeOrder">How to make an order</a>
-          </li>
-          <li class="li">
-            <a class="menu__item theme-specialElement" href="#top">Top</a>
+            <a class="menu__item theme-specialElement" data-i18="MakeOrder" href="#makeOrder">Make an order</a>
           </li>
         </ul>
       </div>
@@ -36,14 +33,14 @@
       /></a>
       <ul class="navigation ">
         <li class="li">
-          <a class="link theme-element" href="#termsOfService">Terms of Service</a>
+          <a class="link theme-element" data-i18="TermsOfService" href="#termsOfService">Terms of Service</a>
         </li>
         <li class="li">
-          <a class="link theme-element" href="#privacyPolicy">Privacy Policy</a>
+          <a class="link theme-element" data-i18="Privacy" href="#privacyPolicy">Privacy Policy</a>
         </li>
-        <li class="li"><a class="link theme-element" href="#ourMessage">Our message</a></li>
+        <li class="li"><a class="link theme-element" data-i18="OurMessage" href="#ourMessage">Our message</a></li>
         <li class="li">
-          <a class="link theme-element" href="#makeOrder">How to make an order</a>
+          <a class="link theme-element" data-i18="MakeOrder" href="#makeOrder">Make an order</a>
         </li>
       </ul>
       <div class="switchers">
@@ -66,12 +63,12 @@
         <img src="..\Images\person.png" alt="light" />
       </button>
     </header>
-    <h2 class="theme-element" id="ourMessege">Our message</h1>
+    <h2 class="theme-element" data-i18="OurMessage" id="ourMessege">Our message</h1>
     <section class="section2 theme-element">
       <div class="div2">
         <div>
-          <h3>Customer Health and Well-being First</h3>
-          <p class="p2">
+          <h3 data-i18="CustomerHealth">Customer Health and Well-being First</h3>
+          <p data-i18="CustomerHealthDif" class="p2">
             We are committed to producing products that promote the healthy
             lifestyles of our customers. All our baking mixes are guaranteed
             gluten-free and sugar-free, providing optimal dietary solutions for
@@ -83,8 +80,8 @@
       <div class="div2">
         <img class="img" src="..\Images\6-2.png" alt="" />
         <div>
-          <h3>Preserving Nature for Future Generations</h3>
-          <p class="p2">
+          <h3 data-i18="PreservingNature">Preserving Nature for Future Generations</h3>
+          <p data-i18="PreservingNatureDif" class="p2">
             We are dedicated to an environmentally responsible approach in
             everything we do. Our products are not only safe for consumption but
             also crafted with environmental concerns in mind. We use packaging
@@ -95,8 +92,8 @@
       </div>
       <div class="div2">
         <div>
-          <h3>Uncompromising Quality</h3>
-          <p class="p2">
+          <h3 data-i18="Uncompromising">Uncompromising Quality</h3>
+          <p data-i18="UncompromisingDif" class="p2">
             We strive for the highest standards of quality in all aspects of our
             business. Our products undergo rigorous selection and quality
             control to ensure that every baking mix bearing the Tarla brand
@@ -107,12 +104,12 @@
       </div>
     </section>
 
-    <h2 class="theme-element" id="makeOrder">How to make an order</h1>
+    <h2 data-i18="Make" class="theme-element" id="makeOrder">How to make an order</h1>
     <section class="section3 theme-element">
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\1.png" alt="" />
-        <h3 class="p6_1">Explore Our Selection</h3>
-        <p class="p3">
+        <h3 data-i18="Explore" class="p6_1">Explore Our Selection</h3>
+        <p data-i18="ExploreDif" class="p3">
           Begin by perusing our delectable assortment of pastry kits on our
           user-friendly website. From classic croissants to indulgent eclairs,
           we have something to satisfy every craving.
@@ -120,8 +117,8 @@
       </div>
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\2.png" alt="" />
-        <h3 class="p6_1">Add to Cart</h3>
-        <p class="p3">
+        <h3 data-i18="AddToCard" class="p6_1">Add to Cart</h3>
+        <p data-i18="AddToCardDif" class="p3">
           Once you've identified the irresistible treats you'd like to indulge
           in, simply add them to your virtual shopping cart with a click. Take
           your time to ensure you've selected all your favorites.
@@ -129,8 +126,8 @@
       </div>
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\3.png" alt="" />
-        <h3>Proceed to Checkout</h3>
-        <p class="p3">
+        <h3 data-i18="Proceed">Proceed to Checkout</h3>
+        <p data-i18="ProceedDif" class="p3">
           When you're ready to complete your order, proceed to our secure
           checkout. Here, you'll enter your delivery details and any special
           instructions. Rest assured, our checkout process is quick and
@@ -139,8 +136,8 @@
       </div>
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\4.png" alt="" />
-        <h3>Confirmation and Preparation</h3>
-        <p class="p3">
+        <h3 data-i18="Confirmation">Confirmation and Preparation</h3>
+        <p data-i18="ConfirmationDif" class="p3">
           After placing your order, you'll receive a confirmation email
           detailing your purchase. Our skilled team will then spring into
           action, meticulously preparing your pastry kits with the utmost care.
@@ -149,52 +146,52 @@
     </section>
     <section class="section1 theme-element">
       <div id="termsOfService" class="div1">
-        <h2>Terms of Service</h1>
+        <h2 data-i18="TermsOfService">Terms of Service</h1>
         <ul class="ul1">
-          <li>
+          <li data-i18="TermsOfService1">
             Tarla Company collects personal information such as name, email
             address, and shipping address solely for the purpose of processing
             orders and providing customer support.
           </li>
-          <li>
+          <li data-i18="TermsOfService2" >
             Personal information provided to Tarla Company is used only for
             order fulfillment, customer communication, and improving our
             services.
           </li>
-          <li>
+          <li data-i18="TermsOfService3">
             We implement industry-standard security measures to protect personal
             information from unauthorized access, alteration, disclosure, or
             destruction.
           </li>
-          <li>
+          <li data-i18="TermsOfService4">
             Tarla Company may use cookies to enhance user experience and track
             website usage.
           </li>
         </ul>
       </div>
       <div id="privacyPolicy" class="div1 theme-element">
-        <h2>Privacy Policy</h1>
+        <h2 data-i18="Privacy">Privacy Policy</h1>
         <ul class="ul1">
-          <li>
+          <li data-i18="Privacy1">
             By accessing or using any services provided by Tarla Company, users
             agree to be bound by these Terms of Service.
           </li>
-          <li>
+          <li data-i18="Privacy2">
             While we strive to provide accurate product descriptions and images,
             Tarla Company does not warrant that product descriptions or other
             content on our website are accurate, complete, reliable, current, or
             error-free.
           </li>
-          <li>
+          <li data-i18="Privacy3">
             Tarla Company will make every effort to ensure timely delivery of
             orders. However, we are not responsible for delays or issues caused
             by third-party shipping carriers.
           </li>
-          <li>
+          <li data-i18="Privacy4">
             Please refer to our Returns and Refunds Policy for information on
             returning products and requesting refunds.
           </li>
-          <li>
+          <li data-i18="Privacy5">
             Tarla Company will make every effort to ensure timely delivery of
             orders. However, we are not responsible for delays or issues caused
             by third-party shipping carriers.
@@ -210,11 +207,13 @@
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
-  <a class="link theme-element" href="..\NotAuthorized\index.html">Tarla</a>
-  <a class="link theme-element" href="..\NotAuthorized\location.html">Location</a>
-  <a class="link theme-element" href="..\NotAuthorized\index.html">Facts</a>
-  <a class="link theme-element" href="..\NotAuthorized\index.html">How use</a>
+  <a class="link theme-element" data-i18="Tarla" href="..\NotAuthorized\index.html">Tarla</a>
+  <a class="link theme-element" data-i18="Location" href="..\NotAuthorized\location.html">Location</a>
+  <a class="link theme-element" data-i18="FAQ" href="..\NotAuthorized\index.html">Facts</a>
+  <a class="link theme-element" data-i18="HowToUse" href="..\NotAuthorized\index.html">How use</a>
 </div>
 <script src="..\changeColor.js"></script>
+<script src="..\changeLanguage.js"></script>
+    <script src="..\changeColor.js"></script>
   </footer> 
 </html>
