fix: change relative path

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="..\NotAuthorized\whoIsTarls.css" />
     <link rel="stylesheet" href="..\NotAuthorized\medialStyleWhoIsTarls.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
-    <link rel="stylesheet" href="NotAuthorized\popup.css" />
+    <link rel="stylesheet" href="popup.css" />
     <title>Who is tarla?</title>
   </head>
   <body class="body theme-element">
@@ -212,7 +212,7 @@
         </div>
       </div>
     </div>
-    <script src="NotAuthorized\popup.js"></script>
+    <script src="popup.js"></script>
   </body>
   <footer class="footer theme-element" >
     <div class="icon">
