--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleLocation.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
-    <link rel="stylesheet" href="NotAuthorized\popup.css"/>
+    <link rel="stylesheet" href="popup.css"/>
     <title>We located</title>
 </head>
 <body class="body">
@@ -129,7 +129,7 @@
     </div>
   <script src="..\Tarla\swaper.js"></script>
   <script src="..\changeLanguage.js"></script>
-  <script src="NotAuthorized/popup.js"></script>   
+  <script src="popup.js"></script>   
 
 </body>
 </html>
